k8s/ingress/controller/nginx/pomoduck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pomoduck-ingress
  labels:
    name: pomoduck-ingress
spec:
  rules:
    - host: pomoduck.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pomoduck-frontend
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 3001
    - host: www.pomoduck.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pomoduck-frontend
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: express-service
                port:
                  number: 3001
